--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,91 @@
+@import url("https://fonts.googleapis.com/css?family=Quicksand");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:700");
 body {
-  font-family: "Raleway", sans-serif;
-  background-color: #fefefe;
-  color: #230a28; }
+  font-family: "Quicksand", sans-serif;
+  background-color: #130918;
+  color: #eadef2; }
 
 h1,
 h2 {
-  font-family: "Raleway", sans-serif; }
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: "Quicksand", sans-serif; }
+
+ul {
+  list-style: none;
+  padding-left: 0; }
 
 button {
   margin-right: 5px;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  color: #eadef2;
+  background-color: transparent;
+  text-transform: uppercase;
+  width: 90%;
+  border: 1px solid #9d138c;
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto; }
+  button:disabled {
+    border: 1px solid #623353;
+    color: #74546a; }
 
-ul {
-  list-style: none; }
+input:focus {
+  outline: none; }
+
+/*input:enabled {
+	outline: none;
+}*/
+input[type="submit"] {
+  margin-right: 5px;
+  margin-bottom: 5px;
+  color: #eadef2;
+  background-color: transparent;
+  text-transform: uppercase;
+  width: 90%;
+  border: 1px solid #9d138c;
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto; }
+  input[type="submit"]:disabled {
+    border: 1px solid #623353;
+    color: #74546a; }
+
+input[type="text"] {
+  border: 0px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  color: #eadef2;
+  background-color: transparent;
+  text-transform: uppercase;
+  width: 90%;
+  border-bottom: 1px solid #9d138c;
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto; }
+  input[type="text"]::placeholder {
+    color: #623353; }
+  input[type="text"]:focus {
+    border-bottom: 1px solid #623353; }
+    input[type="text"]:focus::placeholder {
+      color: #dead80; }
+  input[type="text"]:disabled {
+    border: 1px solid #623353;
+    color: #74546a; }
+
+.taskLabel {
+  font: "Roboto Condensed", sans-serif;
+  font-size: .8em; }
+
+.activeTask {
+  border: 1px solid #2c245a;
+  background-color: #120d2f;
+  padding-left: 2%;
+  margin-top: 20px; }
 
 /*# sourceMappingURL=style.css.map */
