--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,37 +1,134 @@
-$color-primary: #2cf1ff; //teal
-$color-secondary: #ffa755; //orange 
-$color-accent: #9d138c; //deep purple
-$color-shade: #eee; //light-gray
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700');
 
-$color-text: #230a28;
+
+// VARIABLES ------------------------------ /
+//$color-primary: #2cf1ff; //teal
+//$color-secondary: #ffa755; //orange 
+$color-borders: #9d138c; 
+$color-accent: #623353;
+$color-shade: #74546a; 
+
+$highlight-text: #dead80;
+$highlight-border: #96a2ec;
+
+$color-text: #eadef2;
 $color-bg: #130918; //very dark blue
-$color-bg-light: #fefefe; //pinkish white
+$color-bg-light: #fbf3e6; //#
 
-$font-stack-primary: 'Raleway', sans-serif;
-$font-stack-secondary: 'Bree Serif', serif;
+
+$font-stack-primary: 'Quicksand', sans-serif;
+$font-stack-labels: 'Roboto Condensed', sans-serif;
+//$font-stack-primary: 'Raleway', sans-serif;
+//$font-stack-secondary: 'Bree Serif', serif;
 
 $button-gutter: 5px;
 
+$max-width: 1000px;
+
+// MIXINS ------------------------------ /
+@mixin center {
+	width: 100%;
+	max-width: $max-width;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+@mixin inputs { 
+	margin-right: $button-gutter;
+	margin-bottom: $button-gutter;
+	color: $color-text;
+	background-color: transparent;
+	text-transform: uppercase;
+	width: 90%;
+	@content;
+	&:disabled {
+		border: 1px solid $color-accent;
+		color: $color-shade;
+	}
+}
+
+@mixin container {
+	border: 1px solid #2c245a;
+	background-color: #120d2f;
+	padding-left: 2%;
+	margin-top: 20px;
+}
+
+// BASE ------------------------------ /
 body{
 	font-family: $font-stack-primary;
-	background-color: $color-bg-light;
+	background-color: $color-bg;
 	color: $color-text;
 }
 
 h1,
 h2 {
+	@include center;
 	font-family: $font-stack-primary;
-}
-
-button {
-	margin-right: $button-gutter;
-	margin-bottom: $button-gutter;
 }
 
 ul{
 	list-style: none;
+	padding-left: 0;
 }
 
-.ActiveTask {
+button {
+	@include inputs {
+		border: 1px solid $color-borders;
+	}
+	@include center;
+}
+
+input:focus {
+	outline: none;
+}
+
+/*input:enabled {
+	outline: none;
+}*/
+
+input[type="submit"] {
+	@include inputs {
+		border: 1px solid $color-borders;
+	}
+	@include center;
+}
+
+input[type="text"] {
+	border: 0px;
+	@include inputs {
+		border-bottom: 1px solid $color-borders;
+		&::placeholder {
+			color: $color-accent;
+		}
+		&:focus {
+			&::placeholder {
+				color: $highlight-text;
+			}
+			border-bottom: 1px solid $color-accent;
+		}  
+	}
+	@include center;
+}
+
+.taskLabel {
+	font: $font-stack-labels;
+	font-size: .8em;
+}
+
+// REACT COMPONENTS ------------------------------ /
+.activeTask {
+	@include container;
+}
+
+.timer {
 
 }
+
+.createTaskForm {
+
+}
+
+
+// @MEDIA ------------------------------ /
