--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,8 @@ $color-text: #eadef2;
 $color-bg: #130918; //very dark blue
 $color-bg-light: #fbf3e6; //#
 
+$color-error: #f04e7d;
+
 
 $font-stack-primary: 'Quicksand', sans-serif;
 $font-stack-labels: 'Roboto Condensed', sans-serif;
@@ -94,6 +96,7 @@ input[type="submit"] {
 }
 
 input[type="text"] {
+	line-height: 2em;
 	border: 0px;
 	@include inputs {
 		border-bottom: 1px solid $color-borders;
@@ -113,6 +116,10 @@ input[type="text"] {
 .taskLabel {
 	font: $font-stack-labels;
 	font-size: .8em;
+}
+
+input[type="text"].inputError {
+	background-color: $color-error;
 }
 
 // REACT COMPONENTS ------------------------------ /
