changes to modal-content css class so tht top of content does not run off the top of screen

--- a/css/style.css
+++ b/css/style.css
@@ -102,10 +102,13 @@ input[type="text"].inputError {
   background-color: #fbf3e6;
   opacity: 100;
   width: 90%;
+  height: 100%;
   margin: auto;
   color: #74546a; }
-  .edit-modal:hr {
-    width: 100%; }
+
+.modal-content {
+  top: 0;
+  position: fixed; }
 
 .activeTask {
   border: 1px solid #2c245a;
