--- a/scss/style.scss
+++ b/scss/style.scss
@@ -147,7 +147,7 @@ input[type="text"].inputError {
 	background-color: $color-bg-light;
 	opacity: 100;
 	width: 90%;
-	height: 100%;
+	//height: 100%;
 	margin: auto;
 	color: $color-shade;
 }
