--- a/css/style.css
+++ b/css/style.css
@@ -95,27 +95,41 @@ input[type="text"] {
 input[type="text"].inputError {
   background-color: #f04e7d; }
 
-/*.modal-backdrop {
-	background-color: red;
-	opacity: 100;
-}*/
 .modal-open {
   background-color: #2c245a; }
 
-.edit-modal {
-  background-color: #130918;
-  opacity: 100;
-  width: 95%;
-  height: 100%;
-  margin: auto; }
+.modal-dialog {
+  margin: auto;
+  transform: unset !important;
+  -webkit-transform: unset !important; }
 
+.edit-modal {
+  -webkit-animation: fade 0.6s;
+  animation: fade 0.6s;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  background-color: #623353; }
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 .modal-content {
   top: 0;
   position: fixed;
-  width: 95%;
+  width: 100%;
   height: 100%;
   margin: auto;
-  background-color: white; }
+  overflow-y: auto;
+  background-color: #130918; }
 
 .activeTask {
   border: 1px solid #2c245a;
@@ -134,8 +148,8 @@ input[type="text"].inputError {
     margin-bottom: 0; }
 
 .modal-header {
-  padding-bottom: 25px;
-  padding-top: 25px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   border-bottom: 1px solid #96a2ec; }
 
 .modal-footer {
