--- a/scss/style.scss
+++ b/scss/style.scss
@@ -139,31 +139,44 @@ input[type="text"].inputError {
 
 
 // MODALS ------------------------------ /
-/*.modal-backdrop {
-	background-color: red;
-	opacity: 100;
-}*/
-
 .modal-open {
 	background-color: $container-box-border;
 }
 
+//transform unset fixes react-bootstrap bug. default transform animation was broken
+.modal-dialog {
+	margin: auto;
+	transform: unset !important;
+	-webkit-transform: unset !important;
+}
+
+//div hidden behind modal. could be used for fade or to cover main content
 .edit-modal {
-	background-color: $color-bg;
-	opacity: 100;
-	width: 95%;
+    -webkit-animation: fade 0.6s;
+    animation: fade 0.6s;
+    opacity: 1;
+	width: 100%;
 	height: 100%;
 	margin: auto;
-	//color: $color-shade;
+	background-color: $color-accent;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: 0}
+    to {opacity: 1}
+}@keyframes fade {
+    from {opacity: 0}
+    to {opacity: 1}
 }
 
 .modal-content {
 	top: 0;
 	position: fixed;
-	width: 95%;
+	width: 100%;
 	height: 100%;
 	margin: auto;
-	background-color: white; //$color-bg;
+	overflow-y: auto;
+	background-color: $color-bg;
 }
 
 // REACT COMPONENTS ------------------------------ /
@@ -180,8 +193,8 @@ input[type="text"].inputError {
 
 // EDIT ------------------------------ /
 .modal-header {
-	padding-bottom: 25px;
-	padding-top: 25px;
+	padding-bottom: 10px;
+	padding-top: 10px;
 	border-bottom: 1px solid $highlight-border;
 }
 
