--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,16 @@ input[type="text"] {
 input[type="text"].inputError {
   background-color: #f04e7d; }
 
+.validationError {
+  position: relative;
+  padding: 10px;
+  margin-top: 100px;
+  color: #fbf3e6;
+  background-color: #ff0344;
+  border: 1px solid #96a2ec;
+  width: 100%;
+  margin: auto; }
+
 .modal-open {
   background-color: #2c245a; }
 
@@ -104,8 +114,8 @@ input[type="text"].inputError {
   -webkit-transform: unset !important; }
 
 .edit-modal {
-  -webkit-animation: fade 0.6s;
-  animation: fade 0.6s;
+  -webkit-animation: fade 0.4s;
+  animation: fade 0.4s;
   opacity: 1;
   width: 100%;
   height: 100%;
