--- a/scss/style.scss
+++ b/scss/style.scss
@@ -133,8 +133,21 @@ input[type="text"] {
 	font-size: .8em;
 }
 
+// ERRORS ------------------------------ /
+
 input[type="text"].inputError {
 	background-color: $color-error;
+}
+
+.validationError {
+	position: relative;
+	padding: 10px;
+	margin-top: 100px;
+	color: $color-bg-light;
+	background-color: #ff0344;
+	border: 1px solid $highlight-border;;
+	width: 100%;
+	margin: auto;
 }
 
 
@@ -152,8 +165,8 @@ input[type="text"].inputError {
 
 //div hidden behind modal. could be used for fade or to cover main content
 .edit-modal {
-    -webkit-animation: fade 0.6s;
-    animation: fade 0.6s;
+    -webkit-animation: fade 0.4s;
+    animation: fade 0.4s;
     opacity: 1;
 	width: 100%;
 	height: 100%;
