--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ input[type="text"] {
     color: #74546a; }
 
 .taskLabel {
+  display: block;
   font: "Roboto Condensed", sans-serif;
   font-size: .8em; }
 
