--- a/scss/style.scss
+++ b/scss/style.scss
@@ -230,6 +230,7 @@ input[type="text"].inputError {
 	margin-bottom: 10px;
 	border: 1px solid $highlight-border;
 	background-color: $color-bg-light;
+	width: 100%;
 }
 
 
