--- a/scss/style.scss
+++ b/scss/style.scss
@@ -222,7 +222,7 @@ input[type="text"].inputError {
 .modal-content {
 	top: 0;
 	position: fixed;
-	width: 100%;
+	//width: 100%;
 	height: 100%;
 	margin: auto;
 	overflow-y: auto;
