--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,41 @@ input[type="text"].inputError {
   margin: auto; }
 
 .modal-open {
-  background-color: #2c245a; }
+  background-color: #A9A9A9; }
+  .modal-open #root {
+    background-color: #130918;
+    opacity: 0.7;
+    -webkit-animation: rootFade 0.4s;
+    animation: rootFade 0.4s; }
+  .modal-open .tasks {
+    opacity: 0.2;
+    -webkit-animation: elementFade 0.4s;
+    animation: elementFade 0.4s; }
 
+@-webkit-keyframes rootFade {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0.7; } }
+@keyframes fade {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0.7; } }
+@-webkit-keyframes elementFade {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0.2; } }
+@keyframes fade {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0.2; } }
 .modal-dialog {
-  margin: auto;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
   transform: unset !important;
   -webkit-transform: unset !important; }
 
@@ -130,8 +161,7 @@ input[type="text"].inputError {
   opacity: 1;
   width: 100%;
   height: 100%;
-  margin: auto;
-  background-color: #623353; }
+  margin: auto; }
 
 @-webkit-keyframes fade {
   from {
@@ -144,10 +174,9 @@ input[type="text"].inputError {
   to {
     opacity: 1; } }
 .modal-content {
-  top: 0;
   position: fixed;
   height: 100%;
-  margin: auto;
+  margin: 0 auto;
   overflow-y: auto;
   background-color: #130918; }
 
