--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ input[type="submit"] {
   .task-buttons:disabled {
     border: 1px solid #623353;
     color: #74546a; }
+  .task-buttons:focus {
+    outline: 0; }
 
 input[type="text"] {
   width: 100%;
@@ -94,6 +96,11 @@ input[type="text"] {
     border: 1px solid #623353;
     color: #74546a; }
 
+.masthead {
+  width: 100%;
+  height: 40px;
+  background-color: #1e2f51; }
+
 .taskLabel {
   font: "Roboto Condensed", sans-serif;
   font-size: .8em; }
@@ -102,6 +109,25 @@ input[type="text"] {
   font: "Roboto Condensed", sans-serif;
   font-size: .8em;
   display: block; }
+
+.displayName {
+  float: right;
+  line-height: 40px; }
+
+.userAvatar {
+  float: right;
+  width: 60px;
+  height: 40px;
+  background-color: #1e2f51;
+  border: none; }
+  .userAvatar:focus {
+    outline: 0; }
+  .userAvatar:hover {
+    cursor: pointer; }
+  .userAvatar img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%; }
 
 input[type="text"].inputError {
   background-color: #f04e7d; }
