--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,7 @@ $color-secondary: #ffa755; //orange
 $color-borders: #9d138c; 
 $color-accent: #623353;
 $color-shade: #74546a; 
+$color-masthead: #1e2f51;
 
 $highlight-text: #dead80;
 $highlight-border: #96a2ec;
@@ -140,6 +141,9 @@ input[type="submit"] {
 	@include inputs {
 		border: 1px solid $color-borders;
 	}
+	&:focus {
+		outline: 0;
+	}
 }
 
 input[type="text"] {
@@ -161,6 +165,12 @@ input[type="text"] {
 	@include center;
 }
 
+.masthead {
+	width: 100%;
+	height: 40px;
+	background-color: $color-masthead;
+}
+
 .taskLabel {
 	@include label;
 }
@@ -169,6 +179,33 @@ input[type="text"] {
 	@include label;
 	display: block;
 }
+
+.displayName {
+	float: right;
+	line-height: 40px;
+}
+
+.userAvatar {
+	float: right;
+	width: 60px;
+	height: 40px;
+	background-color: $color-masthead;
+	//border: 0px solid black;
+	border: none;
+	&:focus {
+		outline: 0;
+	}
+	&:hover {
+		cursor: pointer;
+	}
+	img {
+		width: 35px;
+		height: 35px;
+		border-radius: 50%;
+	}
+}
+
+
 
 // ERRORS ------------------------------ /
 
