--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:700");
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 body {
   font-family: "Quicksand", sans-serif;
   background-color: #130918;
@@ -164,6 +165,15 @@ input[type="text"] {
   .signOut:disabled {
     border: 1px solid #623353;
     color: #74546a; }
+
+.signInContainer {
+  padding: 15px; }
+
+.googleSignIn {
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto; }
 
 /*
 .taskCard-right {
