changed spinner color

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -378,12 +378,12 @@ input[type="text"].inputError {
   width: 11em;
   height: 11em;
   border-radius: 50%;
-  background: #ffffff;
-  background: -moz-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-  background: -webkit-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-  background: -o-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-  background: -ms-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-  background: linear-gradient(to right, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+  background: $highlight-border;
+  background: -moz-linear-gradient(left, $highlight-border 10%, rgba(150, 162, 236, 0) 42%);
+  background: -webkit-linear-gradient(left, $highlight-border 10%, rgba(150, 162, 236, 0) 42%);
+  background: -o-linear-gradient(left, $highlight-border 10%, rgba(150, 162, 236, 0) 42%);
+  background: -ms-linear-gradient(left, $highlight-border 10%, rgba(150, 162, 236, 0) 42%);
+  background: linear-gradient(left, $highlight-border 10%, rgba(150, 162, 236, 0) 42%);
   position: relative;
   -webkit-animation: load3 1.4s infinite linear;
   animation: load3 1.4s infinite linear;
@@ -394,7 +394,7 @@ input[type="text"].inputError {
 .loader:before {
   width: 50%;
   height: 50%;
-  background: #ffffff;
+  background: $highlight-border;
   border-radius: 100% 0 0 0;
   position: absolute;
   top: 0;
