--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,15 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-
-
 // VARIABLES ------------------------------ /
 // screen sizes
 //$phone: '(max-width: 480px)';
 $tablet-portrait: '(min-width: 767px)';
 $tablet-landscape: '(min-width: 768px) and (max-width: 979px)';
-$small-desktop: '(min-width: 1024px) and (max-width:  11999px)';
-$large-desktop: '(min-width: 12000px)';
+$small-desktop: '(min-width: 1024px) and (max-width:  1499px)';
+$large-desktop: '(min-width: 1500px)';
 $non-retina: 'screen and (-webkit-max-device-pixel-ratio: 1)';
 $retina: '(min--moz-device-pixel-ratio: 1.5), 
                     (-o-min-device-pixel-ratio: 3/2), 
@@ -19,7 +17,6 @@ $retina: '(min--moz-device-pixel-ratio: 1.5),
                     (min-resolution: 144dpi), 
                     (min-resolution: 1.5dppx)';
 
-//$color-primary: #2cf1ff; //teal
 $color-secondary: #ffa755; //orange 
 $color-borders: #9d138c; 
 $color-accent: #623353;
@@ -31,7 +28,7 @@ $highlight-border: #96a2ec;
 
 $color-text: #eadef2;
 $color-bg: #130918; //very dark blue
-$color-bg-light: #fbf3e6; //#
+$color-bg-light: #fbf3e6; 
 
 $color-error: #f04e7d;
 
@@ -110,10 +107,27 @@ ul{
 	padding-left: 0;
 }
 
+.container {
+	max-width: 100%;
+}
+
 .leftCol {
 	@include respond-to($tablet-portrait) {
 		min-height: 100vh;
 		border-right: 1px solid $highlight-border;
+	}
+}
+
+.mainContent {
+		@include respond-to($small-desktop) {
+		width: 80%;
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+	@include respond-to($large-desktop) {
+		width: 60%;
+		margin-right: 20%;
+		margin-left: 20%;
 	}
 }
 
