--- a/css/style.css
+++ b/css/style.css
@@ -209,26 +209,53 @@ input[type="text"] {
   .loginBtn:active {
     box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1); }
 
+/*
+.facebookSignIn {
+	margin: 0 auto;
+	color: #FFF;
+  background-color: #4C69BA;
+  background-image: linear-gradient(#4C69BA, #3B55A0);
+   &:hover {
+  	background-color: #5b7bd5;
+  	background-image: linear-gradient(#5b7bd5, #4864b1);
+  }
+  &:before {
+  display: inline-block;
+  float: left;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  content: url("src/images/fb_logo50.png");
+  margin-left: -45px;
+  margin-right: 17px;
+  width: 48px;
+	}
+}
+*/
 .facebookSignIn {
   margin: 0 auto;
   color: #FFF;
   background-color: #4C69BA;
   background-image: linear-gradient(#4C69BA, #3B55A0); }
-  .facebookSignIn:hover {
-    background-color: #5b7bd5;
-    background-image: linear-gradient(#5b7bd5, #4864b1); }
-  .facebookSignIn:before {
-    display: inline-block;
-    float: left;
-    text-align: center;
-    font-size: 40px;
-    font-family: Facebook Letter Faces, Arial;
-    font-weight: bold;
-    content: url("/src/images/fb_logo50.png");
-    margin-left: -45px;
-    margin-right: 17px;
-    width: 48px; }
 
+.facebookSignIn:hover {
+  background-color: #5b7bd5;
+  background-image: linear-gradient(#5b7bd5, #4864b1); }
+
+/*
+.facebookSignIn::before {
+  display: inline-block;
+  float: left;
+  text-align: center;
+  font-size: 40px;
+  font-family: Facebook Letter Faces, Arial;
+  font-weight: bold;
+  content: url('/src/images/fb_logo50.png');
+  margin-left: -45px;
+  margin-right: 17px;
+  width: 48px;
+}
+*/
 input[type="text"].inputError {
   background-color: #f04e7d; }
 
