--- a/scss/style.scss
+++ b/scss/style.scss
@@ -288,8 +288,8 @@ input[type="text"] {
   }
 }
 
+/*
 .facebookSignIn {
-	//@include center;
 	margin: 0 auto;
 	color: #FFF;
   background-color: #4C69BA;
@@ -301,21 +301,44 @@ input[type="text"] {
   &:before {
   display: inline-block;
   float: left;
-  //border-right: #364e92 1px solid;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  content: url("src/images/fb_logo50.png");
+  margin-left: -45px;
+  margin-right: 17px;
+  width: 48px;
+	}
+}
+*/
+
+.facebookSignIn {
+	//@include center;
+	margin: 0 auto;
+	color: #FFF;
+  background-color: #4C69BA;
+  background-image: linear-gradient(#4C69BA, #3B55A0);
+}
+
+.facebookSignIn:hover {
+  background-color: #5b7bd5;
+  background-image: linear-gradient(#5b7bd5, #4864b1);
+}
+
+/*
+.facebookSignIn::before {
+  display: inline-block;
+  float: left;
   text-align: center;
   font-size: 40px;
   font-family: Facebook Letter Faces, Arial;
   font-weight: bold;
   content: url('/src/images/fb_logo50.png');
-  //content: "f";
   margin-left: -45px;
   margin-right: 17px;
-  //background-color: white;
-  //color: #4C69BA;
   width: 48px;
-  //height: 40px;
-	}
 }
+*/
 
 
 
