--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,13 @@ ul {
   .control-buttons:disabled {
     border: 1px solid #623353;
     color: #74546a; }
+  .control-buttons:hover:enabled {
+    background-color: #130918;
+    background-image: -webkit-linear-gradient(#361844, #130918);
+    background-image: -o-linear-gradient(#361844, #130918);
+    background-image: linear-gradient(#361844, #130918); }
+  .control-buttons:active {
+    border: 1px solid #d35bad; }
 
 input:focus {
   outline: none; }
@@ -87,6 +94,13 @@ input[type="submit"] {
     color: #74546a; }
   .task-buttons:focus {
     outline: 0; }
+  .task-buttons:hover:enabled {
+    background-color: #120d2f;
+    background-image: -webkit-linear-gradient(#361844, #120d2f);
+    background-image: -o-linear-gradient(#361844, #120d2f);
+    background-image: linear-gradient(#361844, #120d2f); }
+  .task-buttons:active {
+    border: 1px solid #d35bad; }
 
 input[type="text"] {
   width: 100%;
@@ -179,6 +193,8 @@ input[type="text"] {
   .signOut:disabled {
     border: 1px solid #623353;
     color: #74546a; }
+  .signOut:active {
+    border: 1px solid #d35bad; }
 
 .signInContainer {
   padding: 15px; }
@@ -217,6 +233,8 @@ input[type="text"] {
 
 .facebookSignIn:hover {
   background-color: #5b7bd5;
+  background-image: -webkit-linear-gradient(#5b7bd5, #4864b1);
+  background-image: -o-linear-gradient(#5b7bd5, #4864b1);
   background-image: linear-gradient(#5b7bd5, #4864b1); }
 
 input[type="text"].inputError {
