--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,17 @@ ul {
     margin-right: 20%;
     margin-left: 20%; } }
 
+.timeLabelContainer {
+  width: 100%; }
+  @media only screen and (min-width: 768px) and (max-width: 979px) {
+    .timeLabelContainer {
+      padding-left: 0px;
+      padding-right: 0px; } }
+
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .timeLabel {
+    float: right; } }
+
 .control-buttons {
   width: 100%;
   margin-right: 5px;
