added Roboto font to facebook button

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -326,6 +326,7 @@ input[type="text"] {
 }
 
 .facebookSignIn {
+	font-family: 'Roboto', sans-serif;
 	margin: 0 auto;
 	color: #FFF;
   background-color: #4C69BA;
