--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ input[type="text"] {
     box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1); }
 
 .facebookSignIn {
+  font-family: 'Roboto', sans-serif;
   margin: 0 auto;
   color: #FFF;
   background-color: #4C69BA;
