--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Quicksand");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:700");
-@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Parisienne|Quicksand|Roboto|Roboto+Condensed:700");
 body {
   font-family: "Quicksand", sans-serif;
   background-color: #111d3a;
@@ -153,6 +151,17 @@ input[type="text"] {
 .displayName {
   float: right;
   line-height: 40px; }
+
+.timepieceLogo {
+  font-family: 'Parisienne', cursive;
+  color: "Quicksand", sans-serif; }
+
+.mastheadLogo {
+  position: relative;
+  left: 15px;
+  top: 5px;
+  line-height: 30px;
+  font-size: 30px; }
 
 .userAvatar {
   float: right;
