styled drop down menu

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,54 @@ input[type="text"] {
     height: 35px;
     border-radius: 50%; }
 
+.userMenu {
+  position: absolute;
+  width: 100%;
+  padding: 3%;
+  color: #111d3a;
+  background-color: #e8e8e8;
+  z-index: 2; }
+  .userMenu button {
+    color: #111d3a;
+    background-color: #d8d8d8; }
+  @media only screen and (min-width: 767px) {
+    .userMenu {
+      right: 0px;
+      width: 50%; } }
+  @media only screen and (min-width: 1024px) and (max-width: 1499px) {
+    .userMenu {
+      width: 30%;
+      padding: 15px; } }
+  @media only screen and (min-width: 1500px) {
+    .userMenu {
+      width: 20%;
+      padding: 15px; } }
+
+.userMenuButton {
+  color: #111d3a;
+  width: 100%;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  color: #eadef2;
+  background-color: transparent;
+  border: 1px solid #9d138c;
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto; }
+  .userMenuButton:disabled {
+    border: 1px solid #623353;
+    color: #74546a; }
+  .userMenuButton:hover:enabled {
+    background-color: #fcf7e5;
+    background-image: -webkit-linear-gradient(#fcf7e5, #d8d8d8);
+    background-image: -o-linear-gradient(#fcf7e5, #d8d8d8);
+    background-image: linear-gradient(#fcf7e5, #d8d8d8); }
+  .userMenuButton:active {
+    border: 1px solid #d35bad; }
+  .userMenuButton:focus {
+    outline: 0; }
+
 .userProfileDropDown {
   color: #111d3a;
   z-index: 1;
