adding inputs to set chart settings

--- a/css/style.css
+++ b/css/style.css
@@ -567,5 +567,19 @@ input[type="text"].inputError {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+.radio-button {
+  display: block; }
+  .radio-button label {
+    padding-left: 10px; }
+
+.radioContainer {
+  padding-right: 30px;
+  padding-left: 30px; }
+
+.radioGroup {
+  width: 50%; }
+  @media only screen and (min-width: 767px) {
+    .radioGroup {
+      width: 30%; } }
 
 /*# sourceMappingURL=style.css.map */
