--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,6 @@ input[type="text"] {
     border: 1px solid #623353;
     color: #74546a; }
 
-.masthead {
-  width: 100%;
-  height: 40px;
-  background-color: #1e2f51; }
-
 .taskLabel {
   font: "Roboto Condensed", sans-serif;
   font-size: .8em; }
@@ -151,6 +146,11 @@ input[type="text"] {
 .displayName {
   float: right;
   line-height: 40px; }
+
+.masthead {
+  width: 100%;
+  height: 40px;
+  background-color: #1e2f51; }
 
 .timepieceLogo {
   font-family: 'Parisienne', cursive;
@@ -572,11 +572,17 @@ input[type="text"].inputError {
   .radio-button label {
     padding-left: 10px; }
 
-.radioContainer {
-  padding-right: 30px;
-  padding-left: 30px; }
+.chartSettings {
+  margin-right: 15px;
+  margin-left: 15px;
+  margin-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 1px solid #1e2f51; }
 
 .radioGroup {
+  padding-right: 15px;
+  padding-left: 15px;
   width: 50%; }
   @media only screen and (min-width: 767px) {
     .radioGroup {
