--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Parisienne|Quicksand|Roboto|Roboto+Condensed:700");
 body {
   font-family: "Quicksand", sans-serif;
   background-color: #111d3a;
@@ -152,6 +153,7 @@ input[type="text"] {
   background-color: #1e2f51; }
 
 .timepieceLogo {
+  font-family: 'Parisienne', cursive;
   color: "Quicksand", sans-serif; }
 
 .mastheadLogo {
