--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
-//@import url('https://fonts.googleapis.com/css?family=Parisienne|Quicksand|Roboto|Roboto+Condensed:700');
+@import url('https://fonts.googleapis.com/css?family=Parisienne|Quicksand|Roboto|Roboto+Condensed:700');
 
-//@import url('https://fonts.googleapis.com/css?family=Parisienne|Quicksand|Roboto|Roboto+Condensed:700');
+
 
 // VARIABLES ------------------------------ /
 // screen sizes
@@ -243,7 +243,7 @@ input[type="text"] {
 }
 
 .timepieceLogo {
-	//font-family: 'Parisienne', cursive;
+	font-family: 'Parisienne', cursive;
 	color: $font-stack-primary;
 }
 
